# src/v1/routers/MatchRouter.ts
@@ -25,5 +25,13 @@ export class MatchRouter extends CommonRoutesConfig {
       `/:id/subMatches`,
       controller.addSubMatches.bind(controller)
     );
+    this.router.put(
+      `/:id/subMatches/subMatchId`,
+      controller.addSubMatches.bind(controller)
+    );
+    this.router.delete(
+      `/:id/subMatches/subMatchId`,
+      controller.addSubMatches.bind(controller)
+    );
   }
 }
